--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
     "dateformat": "^3.0.3",
     "ngx-toastr": "^10.0.2",
     "rxjs": "6.0.0",
-    "zone.js": "^0.8.26"
+    "tar": "^4.4.8",
+    "zone.js": "^0.8.26",
+    "typescript": "~2.8.0",
+    "@angular/cli": "~6.0.8",
+    "@angular/compiler-cli": "^6.0.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
@@ -50,6 +54,6 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.0"
+    "typescript": "~2.8.0"
   }
 }
